@@ -1,3 +1,5 @@
+* Added a BoolVectorDataPlug and a BoolVectorDataParameterHandler.
+
 0.18.0
 ------
 
